still trying to fix the sticky nav on mobile issue

--- a/src/components/Intro.css
+++ b/src/components/Intro.css
@@ -4,7 +4,7 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  height: 700px;
+  height: 800px;
   width: 100%;
   background-image: url("../images/hero_background.png");
   background-position: center;
@@ -105,7 +105,6 @@
     background-repeat: no-repeat;
     flex-direction: column;
     justify-content: center;
-    height: 700px;
     width: 100%;
   }
 
@@ -148,7 +147,6 @@
     background-repeat: no-repeat;
     flex-direction: column;
     justify-content: center;
-    height: 700px;
     width: 100%;
   }
 
@@ -191,7 +189,6 @@
     background-repeat: no-repeat;
     flex-direction: column;
     justify-content: center;
-    height: 700px;
     width: 100%;
   }
 
@@ -233,7 +230,6 @@
     background-repeat: no-repeat;
     flex-direction: column;
     justify-content: center;
-    height: 700px;
     width: 100%;
   }
 
