--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -12,7 +12,7 @@ yellow: #deac70
   display: flex;
   flex-direction: column;
   width: 100%;
-  position: sticky;
+  position: fixed;
   top: 0;
   z-index: 3;
   background: linear-gradient(90deg, #0984e3, #b007a8, #32ab9c, #deac70);
@@ -61,7 +61,7 @@ yellow: #deac70
 
 .scrolled {
   margin-top: 0;
-  position: sticky;
+  position: fixed;
   top: 0;
   background: #fff;
 }
